--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"scripts": {
 		"build": "lerna run build",
 		"clean": "lerna run clean",
-		"format": "prettier --write '**/*.{ts,yml.json,md}' --ignore-path .gitignore"
+		"format": "prettier --write '**/*.{ts,yml,json,md}' --ignore-path .gitignore"
 	},
 	"devDependencies": {
 		"@pinkcig/config": "*",
