--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"scripts": {
 		"build": "lerna run build",
 		"clean": "lerna run clean",
+		"test": "vitest run",
 		"format": "prettier --write '**/*.{ts,yml,json,md}' --ignore-path .gitignore"
 	},
 	"devDependencies": {
@@ -20,7 +21,8 @@
 		"prettier": "^2.7.1",
 		"shx": "^0.3.4",
 		"tsup": "^6.1.2",
-		"typescript": "^4.7.4"
+		"typescript": "^4.7.4",
+		"vitest": "^0.16.0"
 	},
 	"packageManager": "yarn@3.2.1",
 	"prettier": "@pinkcig/config"
