--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -12,7 +12,7 @@
 	"files": [
 		"build/**/*.js",
 		"build/**/*.mjs",
-		"build/**/*.d"
+		"build/**/*.d.*"
 	],
 	"exports": {
 		"import": "./build/index.mjs",
