chore(pkgs): 🔧 fix publishing issue (again)

--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -4,15 +4,20 @@
 	"description": "Utilities to handle environmental variables",
 	"author": "Faye Keller <fayekllr@gmail.com>",
 	"license": "GPL-3.0",
+	"main": "build/index.js",
+	"module": "build/index.mjs",
+	"types": "build/index.d.ts",
+	"browser": "build/index.global.js",
+	"unpkg": "build/index.global.js",
 	"scripts": {
 		"build": "tsup && tsc -b src",
 		"prepack": "yarn build",
 		"clean": "shx rm -rf ./build"
 	},
 	"files": [
-		"build/**/*.js",
-		"build/**/*.mjs",
-		"build/**/*.d.*"
+		"build/**/*.js*",
+		"build/**/*.mjs*",
+		"build/**/*.d*"
 	],
 	"exports": {
 		"import": "./build/index.mjs",
