--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -9,10 +9,15 @@
 		"prepack": "yarn build",
 		"clean": "shx rm -rf ./build"
 	},
+	"main": "build/index.js",
+	"module": "build/index.mjs",
+	"types": "build/index.d.ts",
+	"browser": "build/index.global.js",
+	"unpkg": "build/index.global.js",
 	"files": [
-		"build/**/*.js",
-		"build/**/*.mjs",
-		"build/**/*.d.*"
+		"build/**/*.js*",
+		"build/**/*.mjs*",
+		"build/**/*.d*"
 	],
 	"exports": {
 		"./tsconfig": {
