--- a/packages/pieces/src/tsconfig.json
+++ b/packages/pieces/src/tsconfig.json
@@ -1,14 +1,14 @@
 {
-  "extends": "../../config/tsconfig.base.json",
+	"extends": "../../config/tsconfig.base.json",
 
-  "compilerOptions": {
-    "rootDir": "./",
-    "outDir": "../build",
-    "composite": true,
-    "emitDeclarationOnly": true,
+	"compilerOptions": {
+		"rootDir": "./",
+		"outDir": "../build",
+		"composite": true,
+		"emitDeclarationOnly": true,
 		"target": "ESNext",
-		"module": "ESNext",
-  },
+		"module": "ESNext"
+	},
 
-  "include": ["."]
+	"include": ["."]
 }
